# MusicPlayer

./: .gitignore  CMakeLists.txt  README.md
lib/: FLAC++.lib  FLAC.lib  cppunitd.lib  libmp3lame.lib  mpg123.lib  ogg.lib  opus.lib  out123.lib  pkgconf.lib  portaudio.lib  sndfile.lib  syn123.lib  tag.lib  tag_c.lib  vorbis.lib  vorbisenc.lib  vorbisfile.lib  yasm.lib  zlibd.lib
lib/pkgconfig/: libmpg123.pc  libout123.pc  libsyn123.pc  sndfile.pc
src/: main.cpp
src/core/: Core.cpp  Core.h
src/core/audio/: AudioDecoder.h  MP3AudioDecoder.cpp  MP3AudioDecoder.h
src/core/metadata/: MP3MetadataReader.cpp  MP3MetadataReader.h  MetadataReader.h
src/core/player/: Player.cpp  Player.h
src/core/playlist/: Playlist.cpp  Playlist.h  PlaylistEntry.cpp  PlaylistEntry.h  PlaylistManager.cpp  PlaylistManager.h
src/core/utils/: Utils.cpp  Utils.h
src/ui/: MainWindow.cpp  MainWindow.h  PlaylistView.cpp  PlaylistView.h
